x overflow fix

--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -14,6 +14,7 @@
             background: #F7F4E4;
             border-radius: 0px 50px 50px 50px;
             min-height: 98vh;
+            overflow-x: hidden;
 
             &--island {
                 position: relative;
